# ITS

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  index.html  main.cpp  package-lock.json  test.cpp  vite.config.js
backend/: .gitignore  CMakeLists.txt  main.cpp
backend/core/models/: geometry.cpp  geometry.h  road_network.cpp  road_network.h  routing.cpp  routing.h  signals.cpp  signals.h  sim_math.h  sim_object.h  traffic_light_entity.h  vehicle.cpp  vehicle.h  world_context.h
backend/core/simulation/: simulation.h
bridge/: config.py  main.py  requirements.txt
bridge/models/: __init__.py  session.py  session_manager.py
bridge/utils/: __init__.py  message_converter.py  process.py
core/models/: routing.cpp  signals.cpp  sim_object.h  vehicle.cpp  vehicle.h  world_context.cpp
core/simulation/: simulation.cpp  simulation.h
frontend/: .gitignore  index.html  package.json  style.css
frontend/src/: config.js  graphics.js  main.js  sidewalk.js  socket.js  trafficLight.js  voxelCar.js  world.js
src/: config.js  curb.js  graphics.js  main.js  sidewalk.js  trafficLight.js  voxelCar.js  world.js
